--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="icon" type="image/icon" href="./favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 <body>
@@ -30,8 +31,12 @@
                     <li class="nav__item"><a href="/#about" class="nav__link">À propos</a></li>
                     <li class="nav__item"><a href="/#competences" class="nav__link">Compétences</a></li>
                     <li class="nav__item"><a href="/#blog" class="nav__link">Articles récents</a></li>
-                    <li class="nav__item"><a href="/blog.html" class="nav__link">Tous les articles</a></li>
                     <li class="nav__item"><a href="/#contact" class="nav__link">Contact</a></li>
+
+                    |
+
+                    <li class="nav__item"><a href="/blog.html" class="nav__link">Tous les articles</a></li>
+
                 </ul>
             </nav>
         </div>
