--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
                     |
 
-                    <li class="nav__item"><a href="/blog.html" class="nav__link">Tous les articles</a></li>
+                    <li class="nav__item"><a href="./blog.html" class="nav__link">Tous les articles</a></li>
 
                 </ul>
-            </nav>
+            </nav>  
         </div>
     </header>
     
