--- a/blog.html
+++ b/blog.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Sébastien LEMOINE - Responsable Pédagogique spécialisé en Leadership et Stratégie Éducative">
     <title>Sébastien LEMOINE - Leadership & Stratégie</title>
-    <link rel="icon" type="image/icon" href="./favicon.ico">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/icon" href="./assets/images/favicon.ico">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Raleway:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
             <div class="header__info">
                 <div class="header__picandname">
                     <div class="header__pic">
-                        <img src="./sl.jpg" class="header__picavatar" alt="Sébastien LEMOINE">
+                        <img src="./assets/images/sl.jpg" class="header__picavatar" alt="Sébastien LEMOINE">
                     </div>
                     <div class="header__name">
                         <h1 class="header__title">Sébastien LEMOINE</h1>
@@ -56,6 +56,6 @@
     </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.9/purify.min.js"></script>
-    <script src="blog.js"></script>
+    <script src="./assets/js/blog.js"></script>
 </body>
 </html>
