--- a/blog.html
+++ b/blog.html
@@ -28,14 +28,14 @@
             </div>
             <nav class="nav">
                 <ul class="nav__list">
-                    <li class="nav__item"><a href="/#about" class="nav__link">À propos</a></li>
-                    <li class="nav__item"><a href="/#competences" class="nav__link">Compétences</a></li>
-                    <li class="nav__item"><a href="/#blog" class="nav__link">Articles récents</a></li>
-                    <li class="nav__item"><a href="/#contact" class="nav__link">Contact</a></li>
+                    <li class="nav__item"><a href="/#about" class="nav__link nav__link--ancor">À propos</a></li>
+                    <li class="nav__item"><a href="/#competences" class="nav__link nav__link--ancor">Compétences</a></li>
+                    <li class="nav__item"><a href="/#blog" class="nav__link nav__link--ancor">Articles récents</a></li>
+                    <li class="nav__item"><a href="/#contact" class="nav__link nav__link--ancor">Contact</a></li>
 
                     |
 
-                    <li class="nav__item"><a href="/blog.html" class="nav__link">Tous les articles</a></li>
+                    <li class="nav__item"><a href="/blog.html" class="nav__link active">Tous les articles</a></li>
 
                 </ul>
             </nav>
@@ -56,6 +56,6 @@
     </footer>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/3.0.9/purify.min.js"></script>
-    <script src="./assets/js/blog.js"></script>
+    <script type="module" src="./assets/js/blog.js"></script>
 </body>
 </html>
