--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                         <li>Architecture logicielle</li>
                         <li>Développement web</li>
                         <li>Méthodes agiles</li>
-                        <li>Analyse de performance</li>
+                        <li>Intelligence artificielle</li>
                     </ul>
                 </div>
             </div>
